--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -5,6 +5,7 @@
         align-items: center;
         height: 100vh;
         width: 100vw;
+        background: white;
     }
     
     #Matrix {
@@ -36,6 +37,9 @@
 @media only screen and (max-width: 767px)  {
     #Game {
         padding: 0px;
+        width: 100vw;
+        height: 100vh;
+        background: white;
     }
 
     #Game > div {
